--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ repositories {
 	mavenCentral()
 }
 
-def runeLiteVersion = '1.8.4'
+def runeLiteVersion = '1.8.7-SNAPSHOT'
 
 dependencies {
 	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
@@ -24,7 +24,7 @@ dependencies {
 }
 
 group = 'com.ttsplugin.main'
-version = '1.02'
+version = '1.03'
 sourceCompatibility = '1.8'
 
 tasks.withType(JavaCompile) {
