Change author to new account

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Text to speech
-author=Bullish
+author=JesseVii
 description=Text to speech for chat, dialog, menu options and notifications
 tags=tts,text,voice,chat,dialog,speak,notification
 plugins=com.ttsplugin.main.TTSPlugin
