Update tts to 1.07

--- a/build.gradle
+++ b/build.gradle
@@ -17,16 +17,19 @@ dependencies {
 
 	compileOnly 'org.projectlombok:lombok:1.18.20'
 	annotationProcessor 'org.projectlombok:lombok:1.18.20'
-	
+
 	testImplementation 'junit:junit:4.12'
 	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
 	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
+
+	//Mp3 player, this is already used by other verified plugins so no need to check (except the hash ofcourse)
+	implementation files('libs/jaco-mp3-player-0.9.5.jar')
 }
 
 group = 'com.ttsplugin.main'
 version = '1.07'
-sourceCompatibility = '1.8'
 
 tasks.withType(JavaCompile) {
 	options.encoding = 'UTF-8'
+	options.release.set(11)
 }
