--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,7 @@ dependencies {
 	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
 	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
 
-	//Mp3 player, this is already used by other verified plugins so no need to check (except the hash ofcourse)
-	implementation files('libs/jaco-mp3-player-0.9.5.jar')
+	implementation 'net.runelite:jaco-mp3-player:0.10.2-rl1'
 }
 
 group = 'com.ttsplugin.main'
